--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^4.2.1",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "clsx": "^1.2.0",
     "focus-visible": "^5.2.0",
