--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.3.1",
     "clsx": "^1.2.0",
     "focus-visible": "^5.2.0",
