--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@supabase/supabase-js": "^1.35.6",
     "@tailwindcss/forms": "^0.5.2",
@@ -20,9 +21,12 @@
     "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.3.1",
     "clsx": "^1.2.0",
+    "faunadb": "^4.6.0",
     "focus-visible": "^5.2.0",
     "formik": "^2.2.9",
     "next": "12.2.3",
+    "next-auth": "^4.10.3",
+    "nodemailer": "^6.7.8",
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
