--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "faunadb": "^4.6.0",
     "focus-visible": "^5.2.0",
     "formik": "^2.2.9",
+    "handlebars": "^4.7.7",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "nodemailer": "^6.7.8",
