--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -41,6 +41,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.3",
+    "longjohn": "^0.2.12",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
